fix text wrapping on mobile

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@ p {
     display: inline-block;
     width: auto;
     margin-left: 10px;
+    white-space: nowrap;
 }
 
 #contact-icon {
